--- a/src/passes/CMakeLists.txt
+++ b/src/passes/CMakeLists.txt
@@ -57,4 +57,4 @@ SET(passes_SOURCES
   Vacuum.cpp
   ${CMAKE_CURRENT_BINARY_DIR}/WasmIntrinsics.cpp
 )
-ADD_LIBRARY(passes STATIC ${passes_SOURCES})
+#ADD_LIBRARY(passes STATIC ${passes_SOURCES})
