--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,10 +253,13 @@ add_custom_command(
 add_custom_target(intrinsic-gen DEPENDS ${PROJECT_SOURCE_DIR}/src/passes/WasmIntrinsics.cpp)
 add_dependencies(binaryen intrinsic-gen)
 
-SET_TARGET_PROPERTIES(binaryen PROPERTIES 
+SET_TARGET_PROPERTIES(binaryen PROPERTIES
   ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib
   ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/../../lib
+  ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEPINFO ${CMAKE_CURRENT_SOURCE_DIR}/../../lib
 )
 
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/binaryen-c.h ${CMAKE_CURRENT_SOURCE_DIR}/../../include COPYONLY)
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/compiler-support.h ${CMAKE_CURRENT_SOURCE_DIR}/../../include COPYONLY)
+FILE(INSTALL
+	 ${CMAKE_CURRENT_SOURCE_DIR}/src/binaryen-c.h
+	 ${CMAKE_CURRENT_SOURCE_DIR}/src/compiler-support.h
+     DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
